--- a/publishhtmlreport/package.json
+++ b/publishhtmlreport/package.json
@@ -1,6 +1,6 @@
 {
   "name": "publishhtmlreport",
-  "version": "1.0.0",
+  "version": "1.2.174",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/node": "^10.17.44",
     "@types/q": "^1.5.4",
+    "cheerio": "^1.0.0-rc.6",
     "typescript": "^4.0.2"
   }
 }
